==> ddrown/usbhs-cdc/src/UART/UART.c <==
#include <stdint.h>
#include "UART.h"
#include "ch32v30x_it.h"

void UART2_CfgInit( uint32_t baudrate, uint8_t stopbits, uint8_t parity ) {
    USART_InitTypeDef USART_InitStructure = {0};
    GPIO_InitTypeDef  GPIO_InitStructure = {0};
    uint16_t dat = dat;

    /* delete contains in ( ... )  */
    /* First set the serial port introduction to output high then close the TE and RE of CTLR1 register (note that USARTx->CTLR1 register setting 9 bits has a limit) */
    /* Note: This operation must be performed, the TX pin otherwise the level will be pulled low */
    GPIO_SetBits( GPIOA, GPIO_Pin_2 );
    GPIO_InitStructure.GPIO_Pin   = GPIO_Pin_2;
    GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
    GPIO_InitStructure.GPIO_Mode  = GPIO_Mode_Out_PP;
    GPIO_Init( GPIOA, &GPIO_InitStructure );

    /* clear te/re */
    USART2->CTLR1 &= ~( USART_CTLR1_TE | USART_CTLR1_RE );

    /* USART2 Hard configured: */
    /* Configure USART1 Rx (PA3) as input floating */
    GPIO_InitStructure.GPIO_Pin   = GPIO_Pin_3;
    GPIO_InitStructure.GPIO_Mode  = GPIO_Mode_IPU;
    GPIO_Init( GPIOA, &GPIO_InitStructure );

    /* Configure USART2 Tx (PA2) as alternate function push-pull */
    GPIO_InitStructure.GPIO_Pin   = GPIO_Pin_2;
    GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
    GPIO_InitStructure.GPIO_Mode  = GPIO_Mode_AF_PP;
    GPIO_Init( GPIOA, &GPIO_InitStructure );

    /* Test IO */
    GPIO_InitStructure.GPIO_Pin   = GPIO_Pin_15;
    GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
    GPIO_InitStructure.GPIO_Mode  = GPIO_Mode_Out_PP;
    GPIO_Init( GPIOA, &GPIO_InitStructure );

    /* USART2 configured as follow:
        - BaudRate = 115200 baud  
        - Word Length = 8 Bits
        - One Stop Bit
        - No parity
        - Hardware flow control disabled (RTS and CTS signals)
        - Receive and transmit enabled
        - USART Clock disabled
        - USART CPOL: Clock is active low
        - USART CPHA: Data is captured on the middle 
        - USART LastBit: The clock pulse of the last data bit is not output to 
                         the SCLK pin
    */
    USART_InitStructure.USART_BaudRate = baudrate;
    USART_InitStructure.USART_WordLength = USART_WordLength_8b;

    /* Number of stop bits (0: 1 stop bit; 1: 1.5 stop bits; 2: 2 stop bits). */
    if( stopbits == 1 ) {
        USART_InitStructure.USART_StopBits = USART_StopBits_1_5;
    } else if( stopbits == 2 ) {
        USART_InitStructure.USART_StopBits = USART_StopBits_2;
    } else {
        USART_InitStructure.USART_StopBits = USART_StopBits_1;
    }

    /* Check digit (0: None; 1: Odd; 2: Even; 3: Mark; 4: Space); */
    if( parity == 1 ) {
        USART_InitStructure.USART_Parity = USART_Parity_Odd;
        USART_InitStructure.USART_WordLength = USART_WordLength_9b;
    } else if( parity == 2 ) {
        USART_InitStructure.USART_Parity = USART_Parity_Even;
        USART_InitStructure.USART_WordLength = USART_WordLength_9b;
    } else {
        USART_InitStructure.USART_Parity = USART_Parity_No;
    }
    USART_InitStructure.USART_HardwareFlowControl = USART_HardwareFlowControl_None;
    USART_InitStructure.USART_Mode = USART_Mode_Rx | USART_Mode_Tx;
    USART_Init( USART2, &USART_InitStructure );
    USART_ClearFlag( USART2, USART_FLAG_TC );

    /* Enable USART2 */
    USART_Cmd( USART2, ENABLE );
}

void UART2_Init( uint8_t mode, uint32_t baudrate, uint8_t stopbits, uint8_t parity ) {
    USART_DMACmd( USART2, USART_DMAReq_Rx, DISABLE );
    DMA_Cmd( DMA1_Channel6, DISABLE );
    DMA_Cmd( DMA1_Channel7, DISABLE );

    UART2_CfgInit( baudrate, stopbits, parity );
    UART2_DMAInit( 0, &UART2_Tx_Buf[ 0 ], 0 );
    UART2_DMAInit( 1, &UART2_Rx_Buf[ 0 ], DEF_UARTx_RX_BUF_LEN );

    USART_DMACmd( USART2, USART_DMAReq_Rx, ENABLE );

    UART2_ParaInit( mode );
}

void UART2_USB_Init( void ) {
    uint32_t baudrate;
    uint8_t  stopbits;
    uint8_t  parity;

    baudrate = ( uint32_t )( Uart.Com_Cfg[ 3 ] << 24 ) + ( uint32_t )( Uart.Com_Cfg[ 2 ] << 16 );
    baudrate += ( uint32_t )( Uart.Com_Cfg[ 1 ] << 8 ) + ( uint32_t )( Uart.Com_Cfg[ 0 ] );
    stopbits = Uart.Com_Cfg[ 4 ];
    parity = Uart.Com_Cfg[ 5 ];

    UART2_Init( 0, baudrate, stopbits, parity );

    /* restart usb receive  */
    USBHSD->UEP2_RX_DMA = (uint32_t)(uint8_t *)&UART2_Tx_Buf[ 0 ];
    USBHSD->UEP2_RX_CTRL &= ~USBFS_UEP_R_RES_MASK;
    USBHSD->UEP2_RX_CTRL |= USBFS_UEP_R_RES_ACK;
}

void UART2_DataTx_Deal( void ) {
    uint16_t  count;

    /* uart1 transmission processing */
    if( Uart.Tx_Flag ) {
        /* Query whether the DMA transmission of the serial port is completed */
        if( USART2->STATR & USART_FLAG_TC ) {
            USART2->STATR = (uint16_t)( ~USART_FLAG_TC );
            USART2->CTLR3 &= ( ~USART_DMAReq_Tx );

            Uart.Tx_Flag = 0x00;

            NVIC_DisableIRQ( USBHS_IRQn );
            NVIC_DisableIRQ( USBHS_IRQn );

            /* Calculate the variables of last data */
            count = Uart.Tx_CurPackLen - DEF_UART2_TX_DMA_CH->CNTR;
            Uart.Tx_CurPackLen -= count;
            Uart.Tx_CurPackPtr += count;
            if( Uart.Tx_CurPackLen == 0x00 ) {
                Uart.Tx_PackLen[ Uart.Tx_DealNum ] = 0x0000;
                Uart.Tx_DealNum++;
                if( Uart.Tx_DealNum >= DEF_UARTx_TX_BUF_NUM_MAX )
                {
                    Uart.Tx_DealNum = 0x00;
                }
                Uart.Tx_RemainNum--;
            }

            /* If the current serial port has suspended the downlink, restart the driver downlink */
            if( ( Uart.USB_Down_StopFlag == 0x01 ) && ( Uart.Tx_RemainNum < 2 ) ) {
                USBHSD->UEP2_RX_CTRL &= ~USBFS_UEP_R_RES_MASK;
                USBHSD->UEP2_RX_CTRL |= USBFS_UEP_R_RES_ACK;
                Uart.USB_Down_StopFlag = 0x00;
            }

            NVIC_EnableIRQ( USBHS_IRQn );
        }
    } else {
        /* Load data from the serial port send buffer to send  */
        if( Uart.Tx_RemainNum ) {
            /* Determine whether to load from the last unsent buffer or from a new buffer */
            if( Uart.Tx_CurPackLen == 0x00 ) {
                Uart.Tx_CurPackLen = Uart.Tx_PackLen[ Uart.Tx_DealNum ];
                Uart.Tx_CurPackPtr = ( Uart.Tx_DealNum * DEF_USB_HS_PACK_LEN );
            }
            /* Configure DMA and send */
            USART_ClearFlag( USART2, USART_FLAG_TC );
            DMA_Cmd( DEF_UART2_TX_DMA_CH, DISABLE );
            DEF_UART2_TX_DMA_CH->MADDR = (uint32_t)&UART2_Tx_Buf[ Uart.Tx_CurPackPtr ];
            DEF_UART2_TX_DMA_CH->CNTR = Uart.Tx_CurPackLen;
            DMA_Cmd( DEF_UART2_TX_DMA_CH, ENABLE );
            USART2->CTLR3 |= USART_DMAReq_Tx;
            Uart.Tx_Flag = 0x01;
        }
    }
}

void UART2_DataRx_Deal( void ) {
    uint16_t temp16;
    uint32_t remain_len;
    uint16_t packlen;

    /* Serial port 1 data DMA receive processing */
    UARTx_Rx_DMACurCount = DEF_UART2_RX_DMA_CH->CNTR;
    if( UARTx_Rx_DMALastCount != UARTx_Rx_DMACurCount ) {
        if (Uart.Rx_RemainLen == 0)
            Uart.Rx_TimeOut = 0x00; // start the 10ms timeout from the first byte

        if( UARTx_Rx_DMALastCount > UARTx_Rx_DMACurCount ) {
            temp16 = UARTx_Rx_DMALastCount - UARTx_Rx_DMACurCount;
        } else {
            temp16 = DEF_UARTx_RX_BUF_LEN - UARTx_Rx_DMACurCount;
            temp16 += UARTx_Rx_DMALastCount;
        }
        UARTx_Rx_DMALastCount = UARTx_Rx_DMACurCount;
        if( ( Uart.Rx_RemainLen + temp16 ) > DEF_UARTx_RX_BUF_LEN ) {
            /* Overflow handling */
            /* Save frame error status */
            printf("overflow %u\r\n",(uint32_t)Uart.Rx_RemainLen);
            // we probably had a buffer full condition due to the host not polling
            // get back in sync with where the DMA is pointing
            Uart.Rx_RemainLen = 0;
            Uart.Rx_DealPtr = DEF_UARTx_RX_BUF_LEN - UARTx_Rx_DMACurCount;
        } else {
            Uart.Rx_RemainLen += temp16;
        }
    }

    /*****************************************************************/
    /* Serial port 1 data processing via USB upload and reception */
    if( Uart.Rx_RemainLen ) {
        if( Uart.USB_Up_IngFlag == 0 ) {
            /* Calculate the length of this upload */
            remain_len = Uart.Rx_RemainLen;
            packlen = 0x00;

            // do we have a full packet?
            if( remain_len >= DEF_USBD_HS_PACK_SIZE ) {
                packlen = DEF_USBD_HS_PACK_SIZE;
            } else { // have we buffered this data for longer than timeoutmax?
                if( Uart.Rx_TimeOut >= Uart.Rx_TimeOutMax ) {
                    packlen = remain_len;
                }
            }
            // did we hit the end of the circular buffer? send just part
            if( packlen > ( DEF_UARTx_RX_BUF_LEN - Uart.Rx_DealPtr ) ) {
                packlen = ( DEF_UARTx_RX_BUF_LEN - Uart.Rx_DealPtr );
            }

            /* Upload serial data via usb */
            if( packlen ) {
              write_usb_data((uint32_t)&UART2_Rx_Buf[ Uart.Rx_DealPtr ], packlen);
              at_newline = UART2_Rx_Buf[Uart.Rx_DealPtr + packlen - 1] == '\n';

              /* Calculate the variables of interest */
              Uart.Rx_RemainLen -= packlen;
              Uart.Rx_DealPtr += packlen;
              // did we write to the end of the buffer? circle back to the beginning
              if( Uart.Rx_DealPtr >= DEF_UARTx_RX_BUF_LEN ) {
                Uart.Rx_DealPtr = 0x00;
              }

              /* Start 0-length packet timeout timer */
              if( packlen == DEF_USBD_HS_PACK_SIZE ) {
                Uart.USB_Up_Pack0_Flag = 0x01;
              }
            }
        } else {
            // if we are not being polled by the USB host, pretend like we wrote everything
            if( Uart.USB_Up_TimeOut >= DEF_UARTx_USB_UP_TIMEOUT ) {
                Uart.USB_Up_IngFlag = 0x00;
                USBHS_Endp_Busy[ DEF_UEP2 ] = 0;
                // drop the buffer and get back in sync with DMA
                Uart.Rx_RemainLen = 0;
                Uart.Rx_DealPtr = DEF_UARTx_RX_BUF_LEN - UARTx_Rx_DMACurCount;
            }
        }
    }

    /*****************************************************************/
    /* Determine if a 0-length packet needs to be uploaded (required for CDC mode) */
    if( Uart.USB_Up_Pack0_Flag ) {
        if( Uart.USB_Up_IngFlag == 0 ) {
            if( Uart.USB_Up_TimeOut >= ( DEF_UARTx_RX_TIMEOUT * 20 ) ) {
                NVIC_DisableIRQ( USBHS_IRQn );
                NVIC_DisableIRQ( USBHS_IRQn );
                Uart.USB_Up_IngFlag = 0x01;
                Uart.USB_Up_TimeOut = 0x00;
                USBHSD->UEP2_TX_LEN  = 0x00;
                USBHSD->UEP2_TX_CTRL &= ~USBHS_UEP_T_RES_MASK;
                USBHSD->UEP2_TX_CTRL |= USBHS_UEP_T_RES_ACK;
                Uart.USB_Up_IngFlag = 0;
                NVIC_EnableIRQ( USBHS_IRQn );
                Uart.USB_Up_Pack0_Flag = 0x00;
            }
        }
    } else {
      check_pps_output();
    }
}
